Fixed ghost scrollbar appearance in submissions list in Safari

--- a/app/web/src/main/resources/uk/ac/ebi/fg/annotare2/web/gwt/user/public/UserApp.css
+++ b/app/web/src/main/resources/uk/ac/ebi/fg/annotare2/web/gwt/user/public/UserApp.css
@@ -93,6 +93,19 @@
     vertical-align: top;
 }
 
+.app-SubmissionList ::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+.app-SubmissionList ::-webkit-scrollbar-thumb {
+    width: 7px;
+    height: 7px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: rgba(0,0,0,0.3);
+}
+
 .app-SubmissionList td div {
     white-space: nowrap;
     overflow: hidden;
